# advent-of-code

./: .gitignore  day.sh  pyproject.toml  setup.cfg  template.py
12/: main.py
15/: main.py
16/: main.py
17/: main.py
18/: main.py
19/: main.py
20/: main.py
2022/01/: main.py
2022/02/: main.py
2022/03/: main.py
2022/04/: main.py
2022/05/: main.py
2022/06/: main.py
2022/07/: main.py
2022/08/: main.py
2022/09/: main.py
2022/10/: main.py
2022/11/: main.py
2022/12/: main.py
2022/13/: main.py
2022/14/: main.py
2022/15/: main.py
2022/16/: main.py
2022/18/: main.py
2022/20/: main.py
2022/22/: main.py
2022/23/: main.py
2022/24/: main.py
2024/01/: main.py  main.zig
2024/02/: main.py  main.zig
2024/03/: main.py
2024/04/: main.py
2024/05/: main.py
21/: main.py
22/: main.py
24/: main.py
25/: main.py
aoc/: __init__.py  args.py  template.py
