[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = ""
authors = ["Matteo De Wint <matteo@gorilla.co>"]
readme = "README.md"
packages = [{include = "aoc"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.3"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
