[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Matteo De Wint <matteo@mailfence.com>"]
readme = "README.md"
packages = [{include = "aoc"}]

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
